--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="container">
     <div class="content">
       <div id="giftguide_image">
-        <img src="/Users/dejaneedixon/Documents/GitHub/dejaneedixon.github.io/images/image_v02.jpg" usemap="#giftguide">
+        <img src="https://dejaneedixon.github.io/images/image_v02.jpg" usemap="#giftguide">
         <map name="giftguide">
           <area shape="rect" coords="29,486,267,273" href="https://www.solesociety.com/genneene.html?color=honey-gold">
           <area shape="rect" coords="259,242,467,421" href="https://www.solesociety.com/sj-600014.html?color=gold&amp;size=one-size">
